--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ tokio = { version = "1.27.0", features = ["full"] }
 crossterm = { version = "0.27.0", features = ["serde"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
-ksway = "0.1.0"
+serde_json = "1.0.111"
+swayipc-async = "2.0.2"
+futures-util = "0.3.30"
+anyhow = "1.0.79"
