--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.111"
 swayipc-async = "2.0.2"
-futures-util = "0.3.30"
+futures-util = "0.3.29"
 anyhow = "1.0.79"
 rgb= "0.8.37"
+souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
