--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ serde_json = "1.0.111"
 swayipc-async = "2.0.2"
 futures-util = "0.3.30"
 anyhow = "1.0.79"
-rgb= "0.8.37"
+rgb = "0.8.37"
+clap = { version = "^4.4", features = ["derive"] }
+dirs = "5.0.1"
