--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ swayipc-async = "2.0.2"
 futures-util = "0.3.29"
 anyhow = "1.0.79"
 rgb = "0.8.37"
-clap = { version = "^4.4", features = ["derive"] }
+clap = { version = "^4.4", features = ["derive", "cargo"] }
 dirs = "5.0.1"
 souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
