--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0.111"
 swayipc-async = "2.0.2"
 futures-util = "0.3.29"
 anyhow = "1.0.79"
-rgb = "0.8.37"
+rgb = { version = "0.8.37", features = ["serde"] }
 clap = { version = "^4.4", features = ["derive"] }
 dirs = "5.0.1"
 souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
