--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ swayipc-async = "2.0.2"
 futures-util = "0.3.30"
 anyhow = "1.0.79"
 rgb = { version = "0.8.37", features = ["serde"] }
-clap = { version = "^4.4", features = ["derive"] }
 dirs = "5.0.1"
 souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
+clap = { version = "^4.4", features = ["derive", "cargo"] }
+hsl = "0.1.1"
