--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ dirs = "5.0.1"
 souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 clap = { version = "^4.4", features = ["derive", "cargo"] }
-hsl = "0.1.1"
+hsv = "0.1.1"
