--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,8 +20,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: clippy-check
-      uses: LoliGothick/clippy-check@v0.3.1
-      with:
-        # GitHub token
-        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Clippy
+      run: cargo clippy
