--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"
 tokio-util = { version = "0.7.10", features = ["rt"] }
 clap = { version = "^4.4", features = ["derive", "cargo"] }
 hsv = "0.1.1"
+noise = "0.8.2"
