--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 openrgb = "0.1.2"
 rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
-crossterm = { version = "0.27.0", features = ["serde"]}
+crossterm = { version = "0.27.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.25"
 serde_json = "1.0.111"
@@ -23,3 +23,4 @@ tokio-util = { version = "0.7.10", features = ["rt"] }
 clap = { version = "^4.4", features = ["derive", "cargo"] }
 hsv = "0.1.1"
 noise = "0.8.2"
+libpulse-binding = "2.28.1"
